# autopatcher

./: .gitignore  Cargo.toml
migrations/: 20230917123930_roms.sql
src/: db.rs  hash.rs  main.rs  scan.rs
src/hash/: archive.rs
src/scan/: hash.rs
