[package]
name = "autopatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compress-tools = { path = "../compress-tools-rs", version = "0.14.3" }
crossbeam-channel = "0.5.8"
generic-array = "0.14.7"
infer = "0.15.0"
sha1 = "0.10.5"
walkdir = "2.3.3"
zip = "0.6.6"
